Fix completo per deploy Render

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "strapi build",
-    "console": "strapi console",
-    "deploy": "strapi deploy",
-    "dev": "strapi develop",
-    "develop": "strapi develop",
-    "start": "strapi start",
-    "strapi": "strapi",
+    "preinstall": "corepack enable || true",
+    "build": "NODE_ENV=production yarn install && yarn strapi build",
+    "develop": "yarn strapi develop",
+    "start": "yarn strapi start",
+    "strapi": "node ./node_modules/@strapi/strapi/bin/strapi.js",
+    "console": "yarn strapi console",
+    "deploy": "yarn strapi deploy",
     "upgrade": "npx @strapi/upgrade latest",
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
